schroot (1.1.3-1) UNRELEASED; urgency=low

  * New upstream development release.

 -- Roger Leigh <rleigh@debian.org>  Sat, 19 May 2007 18:17:07 +0100

schroot (1.1.2-1) unstable; urgency=high

  * New upstream development release.
  * debian/control
    - Remove libsbuild1 dependency from libsbuild-dev.
    - libsbuild1-dev is in Section devel.
    - Use ${source:Version} to allow binNMUs.
    - Add new package, libsbuild-doc.
    - schroot-common Replaces schroot (<< 1.1.1).  Thanks to Hamish Moffatt
      and Adeodato Simó for reporting this bug (Closes: #422741, #422863).
  * debian/rules:
    - Split arch-dependent and arch-independent packages into separate
      rules.
    - Remove .map and .md5 files from the Doxygen docs.
  * debian/libsbuild-doc.docs: New file.  Install doxygen HTML
    documentation and tag file.
  * debian/libsbuild-doc.doc-base: Register docs with doc-base.
  * bin/schroot/setup/10mount: Don't exec schroot-listmounts in a
    subshell.  This prevents an error (such as a bad exit status) from
    being noticed by the script, and as a result failure to umount
    filesystems may result in severe dataloss when stop scripts then "rm
    -rf" the chroot.  Thanks to Lucas Nussbaum for reporting this bug, and
    Frans Pop for suggesting the solution (Closes: #422909).  Urgency is
    set high because this is a critical bug.

 -- Roger Leigh <rleigh@debian.org>  Thu, 10 May 2007 22:49:39 +0100

schroot (1.1.1-1) unstable; urgency=low

  [ Roger Leigh ]
  * New upstream development release.
  * debian/schroot.init: Add LSB init info and use LSB init functions.
  * debian/control:
    - schroot-common: New package, containing locale data.
    - libsbuild1-dev: New package, containing libsbuild headers, a static
      library and pkg-config data.
    - schroot, dchroot and dchroot-dsa depend upon schroot-common
  * debian/rules:
    - Add dh_makeshlibs.
    - Make dh_shlibdeps use the shlibs data for libsbuild1.