@@ -1,8 +1,12 @@
 schroot (1.1.3-1) UNRELEASED; urgency=low
 
   * New upstream development release.
+  * bin/schroot-base/schroot-base-run.h, sbuild/sbuild-basic-keyfile.tcc:
+    Cope with failure when the locale set in the user's environment is
+    invalid, by falling back to the C locale (Closes: #425117).  Thanks to
+    Martin Michlmayr for reporting this bug.
 
- -- Roger Leigh <rleigh@debian.org>  Sat, 19 May 2007 18:17:07 +0100
+ -- Roger Leigh <rleigh@debian.org>  Sat, 19 May 2007 18:23:32 +0100
 
 schroot (1.1.2-1) unstable; urgency=high
 
